# customs-rs

./: Cargo.toml
data/: GenTest.py
src/: citizenship.rs  customs.rs  customs_info.rs  error.rs  lib.rs  main.rs  officer.rs  output.rs  output_time.rs  process.rs  utils.rs
tests/: test.rs
