[package]
name = "customs-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
anyhow = "1"
dhat = "0.3"

[dev-dependencies]

[profile.release]
debug = 1

[features]
dhat = []

[package.metadata.clippy]
warn = [
    "clippy::pedantic",
    "clippy::nursery",
    "clippy::unwrap_used",
    "clippy::expect_used",
]
